# brawlstars.py

./: .pylintrc  CONTRIBUTING.md  LICENSE  README.rst  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: codeql.yml
brawlstars/: __init__.py  client.py  endpoints.py  exceptions.py  models.py  utils.py
docs/: conf.py  index.rst
examples/: discord_bot.py  events.py
tests/: test_client.py  test_models.py
